@@ -26,8 +26,7 @@ if %errorlevel% == 0 (
     echo   java server.PalServer
     echo.
     echo To run the CLIENT, open another command prompt and type:
-    echo   cd out
-    echo   java --module-path "..\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -cp ".;libs\*" client.PalClient
+    echo   launch-client.bat
     echo.
 ) else (
     echo.
